tests/ui/async-await/async-closures/cast-as-infer-self-borrows.stderr
error[E0282]: type annotations needed
  --> $DIR/cast-as-infer-self-borrows.rs:6:32
   |
LL |     needs_fn_mut(async || x as _)
   |                                ^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
